View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0033217 | Open CASCADE | OCCT:DRAW | public | 2022-11-22 16:59 | 2022-12-11 22:37 |
Reporter | atereshi | Assigned To | atereshi | ||
Priority | normal | Severity | minor | ||
Status | verified | Resolution | fixed | ||
Target Version | 7.7.1 | ||||
Summary | 0033217: DRAW - Debug tools | ||||
Description | DrawTrSurf_Set, DrawTrSurf_SetPnt and DrawTrSurf_SetPnt2d functions are declared without Standard_EXPORT attribute in DrawTrSurf_Debug.cxx. Therefore, it is not possible to use these functions from the debugger in some software development environment. For comparison, the DBRep_Set function from DBRep_Debug.cxx has Standard_EXPORT attribute. | ||||
Steps To Reproduce | Not possible | ||||
Tags | No tags attached. | ||||
Test case number | |||||
|
Branch CR33217 has been created by atereshi. SHA-1: 28d7b58ea0c5ba18ab293c3ba11fda80641f59f0 Detailed log of new commits: Author: atereshi Date: Tue Nov 22 16:46:06 2022 +0300 0033217: DRAW - Missed Standard_EXPORT attribute in DrawTrSurf_Set* functions |
|
To integrate: occt - CR33217 products - none |
|
Branch CR33217 has been deleted by mnt. SHA-1: 28d7b58ea0c5ba18ab293c3ba11fda80641f59f0 |
Date Modified | Username | Field | Change |
---|---|---|---|
2022-11-22 16:59 | atereshi | New Issue | |
2022-11-22 16:59 | atereshi | Assigned To | => atereshi |
2022-11-22 17:02 | git | Note Added: 0112276 | |
2022-11-22 17:04 | atereshi | Assigned To | atereshi => msv |
2022-11-22 17:04 | atereshi | Status | new => resolved |
2022-11-22 17:04 | atereshi | Steps to Reproduce Updated | |
2022-11-22 19:12 | msv | Assigned To | msv => bugmaster |
2022-11-22 19:12 | msv | Status | resolved => reviewed |
2022-11-22 19:12 | msv | Note Added: 0112278 | |
2022-12-04 13:30 | smoskvin | Status | reviewed => tested |
2022-12-05 00:25 | smoskvin | Changeset attached | => occt master 3837b3bf |
2022-12-05 00:25 | atereshi | Assigned To | bugmaster => atereshi |
2022-12-05 00:25 | atereshi | Status | tested => verified |
2022-12-05 00:25 | atereshi | Resolution | open => fixed |
2022-12-11 22:37 | git | Note Added: 0112577 |